# metamorphic-testing-rs

./: Cargo.toml  LICENSE.txt  testu01
.cargo/: config.toml
src/: hash_metamorphic.rs  kem_metamorphic.rs  kyber_argyle_metamorphic.rs  kyber_metamorphic.rs  lib.rs  main.rs
