[package]
name = "metamorphic-testing-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
sha3 = "0.10.8"
rand = "0.8.5"
ml-kem = { git = "https://github.com/thomasarmel/KEMs.git", branch = "expand_perms" }
strum = "0.26.3"
strum_macros = "0.26.4"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pqc_kyber = "0.7.1"
fake_crypto_rng = {git="https://github.com/thomasarmel/fake_crypto_rng.git"}