[package]
name = "metamorphic-testing-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
sha3 = "0.10.8"
rand = "0.8.5"
rayon = "1.10.0"
blake2 = "0.10.6"
ascon-hash = "0.2.0"
belt-hash = "0.1.1"
fsb = "0.1.3"
groestl = "0.10.1"
jh = "0.1.0"
ripemd = "0.1.3"
shabal = "0.4.1"
skein = "0.1.0"
sm3 = "0.4.2"
tiger = "0.2.1"
whirlpool = "0.10.4"
blake3 = "1.5.4"
ring = "0.17.8"
pqc_kyber = "0.7.1"
